[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "python_rust_module"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "python_rust_module"
version = "0.1.1"
description = ""
authors = ["wellshs <wellshs999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
maturin = "^1.1.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.8.0"

